--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <main class="container">
           <h3>The Maiden and the Skull Kraken</h3>
         <div class="row">
-          <div class="col">
+          <div class="col-lg-4 col-sm-6 col-xs-12">
             <p>Long, long ago, there was a beautiful girl named Miranda.
               She liked picking flowers and riding her horse and doing normal girl stuff but there was something not right about her.
             </p>
@@ -36,7 +36,7 @@
               Sometimes she would awake to the feeling of cold tentacles gripping her tightly.
             </p>
           </div>
-          <div class="col">
+          <div class="col-lg-4 col-sm-6 col-xs-12">
             <p>She didn't know it properly, but the Skull Kraken wanted her to be his bride and was putting dreams of the deep sea into her head.
             </p>
             <p>Miranda's parents knew she was pretty weird and worried about not being able to find a husband for her.
@@ -102,87 +102,105 @@
     </div>
 </div>
 <h3>A Cautionary Tale of Captain Tobacco and Jake the Shark</h3>
-         <div class="row">
-            <div class="col">
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="false">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <div class="row">
+        <div class="col">
 
-              <p>Once upon a time there was a pirate named Captain Tobacco. He was called Captain Tobacco because he liked smoking a pipe and shouting curses at people, and when he did both at once, he sprayed tobacco everywhere.
-              </p>
-              <p>Captain Tobacco's ship was called the Saucy Squid and she was a fine ship.
-              </p>
-              <p>One day while out sailing on the Saucy Squid and looking for a nice juicy merchant vessel to rob, Captain Tobacco spied a quite large shark swimming along beside the Squid.
-              </p>
-              <p>"Get away with ye!" cried Captain Tobacco. "I don't like the look of those teeth of yours and I've better things to do than be wrestling with a shark. Why, I wrestled one last Tuesday and it took me until Sunday to get all the shark teeth out of me arse."
-              </p>
-              <p>"My good sir," replied the shark. "Allow me to introduce myself; my name is Jake. I am not one of those uncouth sharks you're used to. I enjoy the finer things in life, and sadly under the ocean we lack fine things. Or perhaps it's all just become commonplace to me."
-              </p>
-            </div>
-            <div class="col">
-              <p>"In any case," Jake continued, "I wonder if I can tempt you with an intriguing proposition. It is as follows; we trade places, you and I, for one week. I can lead your crew on this marvellous vessel, the Saucy Squid. An in turn you can experience all the wonders of the deep ocean. Think of all the hidden treasures you can discover
-              <p>At the mention of treasure, a strange feeling came over Captain Tobacco, as it always did, like a wonderful itching all over his skin. (He couldn't help it - he was a pirate).
-              </p>
+          <p>Once upon a time there was a pirate named Captain Tobacco. He was called Captain Tobacco because he liked smoking a pipe and shouting curses at people, and when he did both at once, he sprayed tobacco everywhere.
+          </p>
+          <p>Captain Tobacco's ship was called the Saucy Squid and she was a fine ship.
+          </p>
+          <p>One day while out sailing on the Saucy Squid and looking for a nice juicy merchant vessel to rob, Captain Tobacco spied a quite large shark swimming along beside the Squid.
+          </p>
+          <p>"Get away with ye!" cried Captain Tobacco. "I don't like the look of those teeth of yours and I've better things to do than be wrestling with a shark. Why, I wrestled one last Tuesday and it took me until Sunday to get all the shark teeth out of me arse."
+          </p>
+          <p>"My good sir," replied the shark. "Allow me to introduce myself; my name is Jake. I am not one of those uncouth sharks you're used to. I enjoy the finer things in life, and sadly under the ocean we lack fine things. Or perhaps it's all just become commonplace to me."
+          </p>
+        </div>
+        <div class="col">
+          <p>"In any case," Jake continued, "I wonder if I can tempt you with an intriguing proposition. It is as follows; we trade places, you and I, for one week. I can lead your crew on this marvellous vessel, the Saucy Squid. An in turn you can experience all the wonders of the deep ocean. Think of all the hidden treasures you can discover
+            <p>At the mention of treasure, a strange feeling came over Captain Tobacco, as it always did, like a wonderful itching all over his skin. (He couldn't help it - he was a pirate).
+            </p>
+            <p>"Treasure, eh," he murmured, his mind full of sunken chests overflowing with gold. "I reckon maybe the sea still has some treasures to be found. Very well, shark, I accept you proposal. Let's meet back at this spot in one week to swap back.
+            </p>
+            <p>Just like that, Captain Tobacco found himself under the water. For a second he felt afraid that he might drown, but then he realised he was a shark and could breathe and swim underwater. The first thing he did was swim deep down, looking for wrecked ships and the treasures they might contain.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item">
 
-              <p>"Treasure, eh," he murmured, his mind full of sunken chests overflowing with gold. "I reckon maybe the sea still has some treasures to be found. Very well, shark, I accept you proposal. Let's meet back at this spot in one week to swap back.
-              </p>
-
-              <p>Just like that, Captain Tobacco found himself under the water. For a second he felt afraid that he might drown, but then he realised he was a shark and could breathe and swim underwater. The first thing he did was swim deep down, looking for wrecked ships and the treasures they might contain.
-              </p>
-              </div>
-            </div>
-              <div class="row">
-                 <div class="col">
-              <p>It wasn't long before he spotted one, and she was a beauty. There were still some skeletons of men and women on her deck, wearing rich jewels, and after a bit of swimming around Captain Tobacco found a large chest. "This must be full of treasure!" he said to himself. But when he went to open it, he realised he had no hands, only a pair of stupid fins.
-              </p>
-              <p>"Never mind," he thought, "what good is it being a shark if you can't use your great big teeth!" And with that he set upon the chest's catch with his great teeth and soon had it open. But he couldn't carry the treasure away because he had no hands to carry it.
-              </p>
-              <p>Captain Tobacco was very disappointed. "Buggery fuck" he cursed "argh well at least I know where it is now. And I can find others. Next week when I trade places back with Jake the Shark I can come back here and send my best swimmers down to fetch the treasure." He decided to swim up to the surface and see if there were any landmarks or stars that could help guide him back to this spot.
-              </p>
-            </div>
-            <div class="col">
-              <p>On his way to the surface, when he had nearly reached the top, Captain Tobacco spied a thrashing movement. At first he thought it was two fish fighting, but then he realised it was two human legs kicking. By the way the person, a young man, was thrashing around Captain Tobacco knew he was in a spot of bother and would probably drown. "Argh, too bad for yer" he thought.
-                <p>
-              <p>Just then a strange feeling came over Captain Tobacco; he realised he was hungry, and that, while he never would have thunk it before, those two kicking man-legs looked very tasty. "Argh what could be the harm to have a little nibble," he thought to himself.
-                <p>Captain Tobacco surprised himself by eating first one leg, then the other, then the entire rest of the poor gentlemen, before he hardly knew what was happening. "Argh bugger me, turns out a man is a juicy morsel - I know what them sharks been on about all this time, I do," reflected Captain Tobacco.
-                </p>
+        <div class="row">
+          <div class="col">
+            <p>It wasn't long before he spotted one, and she was a beauty. There were still some skeletons of men and women on her deck, wearing rich jewels, and after a bit of swimming around Captain Tobacco found a large chest. "This must be full of treasure!" he said to himself. But when he went to open it, he realised he had no hands, only a pair of stupid fins.
+            </p>
+            <p>"Never mind," he thought, "what good is it being a shark if you can't use your great big teeth!" And with that he set upon the chest's catch with his great teeth and soon had it open. But he couldn't carry the treasure away because he had no hands to carry it.
+            </p>
+            <p>Captain Tobacco was very disappointed. "Buggery fuck" he cursed "argh well at least I know where it is now. And I can find others. Next week when I trade places back with Jake the Shark I can come back here and send my best swimmers down to fetch the treasure." He decided to swim up to the surface and see if there were any landmarks or stars that could help guide him back to this spot.
+            </p>
+          </div>
+          <div class="col">
+            <p>On his way to the surface, when he had nearly reached the top, Captain Tobacco spied a thrashing movement. At first he thought it was two fish fighting, but then he realised it was two human legs kicking. By the way the person, a young man, was thrashing around Captain Tobacco knew he was in a spot of bother and would probably drown. "Argh, too bad for yer" he thought.
+              <p>
+                <p>Just then a strange feeling came over Captain Tobacco; he realised he was hungry, and that, while he never would have thunk it before, those two kicking man-legs looked very tasty. "Argh what could be the harm to have a little nibble," he thought to himself.
+                  <p>Captain Tobacco surprised himself by eating first one leg, then the other, then the entire rest of the poor gentlemen, before he hardly knew what was happening. "Argh bugger me, turns out a man is a juicy morsel - I know what them sharks been on about all this time, I do," reflected Captain Tobacco.
+                  </p>
                 </div>
               </div>
-                <div class="row">
-                   <div class="col">
-                <p>Over the next week, Captain Tobacco found many sunken treasure ships he would never have discovered otherwise, and when he wasn't doing that he was munching on men who had fallen overboard (actually they were mostly naughty sailors who'd been forced to walk the plank). Captain Tobacco had never known such good eating in his life and had to admit he would miss the taste of human flesh once he became a pirate again.
-                </p>
-                <p>When the week was over, Captain Tobacco swam to the spot where he had left the Saucy Squid, and there she was, as agreed, with Jake the Shark, resplendent in sea captain garb, leaning over the edge and waving to him.
-                </p>
-                <p>"I say, Captain Tobacco," called out Jake, "I've had a perfectly marvellous week, robbing merchants at sea and drinking and whoring on land. Being a pirate is wonderful! But I really must attend to some business in the underwater world, so alas we must swap back to our original forms."
-                </p>
-                <p>Before he know it, Captain Tobacco was back on the deck of the Saucy Squid, wearing his pirate clothes and pirate hat. "Well that was interesting," he thought to himself.
-                  <p>
+            </div>
+            <div class="carousel-item">
+
+              <div class="row">
+                <div class="col">
+                  <p>Over the next week, Captain Tobacco found many sunken treasure ships he would never have discovered otherwise, and when he wasn't doing that he was munching on men who had fallen overboard (actually they were mostly naughty sailors who'd been forced to walk the plank). Captain Tobacco had never known such good eating in his life and had to admit he would miss the taste of human flesh once he became a pirate again.
+                  </p>
+                  <p>When the week was over, Captain Tobacco swam to the spot where he had left the Saucy Squid, and there she was, as agreed, with Jake the Shark, resplendent in sea captain garb, leaning over the edge and waving to him.
+                  </p>
+                  <p>"I say, Captain Tobacco," called out Jake, "I've had a perfectly marvellous week, robbing merchants at sea and drinking and whoring on land. Being a pirate is wonderful! But I really must attend to some business in the underwater world, so alas we must swap back to our original forms."
+                  </p>
+                  <p>Before he know it, Captain Tobacco was back on the deck of the Saucy Squid, wearing his pirate clothes and pirate hat. "Well that was interesting," he thought to himself.
+                  </p>
+                </div>
+                <div class="col">
+                  <p>At first, all was well. Until one evening first mate Olly Graves was gutting a fish on deck and accidentally cut his finger. As the cut bled, Captain Tobacco got a faint whif of man-blood and that same peculiar feeling came over him.
+                  </p>
+                  <p>"Aye, Olly Graves," he said gently, "Let us have a look at yer wound then."
+                  </p>
+                  <p>The look of horror Olly Graves gave in return was enough to tell Captain Tobacco that something wasn't right. His jaw felt strange and his vision was strange... he caught his reflection in Olly's knife and realised instead of a beard and a pirate hat, he now had the head of a shark!
+                  </p>
+
+                  <p>Before you could say "here fishy fishy", Captain Tobacco had bitten poor Olly Graves in half and was munching him happily.
+                  </p>
+                  <p>Within a week, Captain Tobacco had eaten the entire crew. At first he missed them, because sailing a pirate ship is hard on one's own. So he made a trip to shore and hired a new crew, but before long he had eaten them too.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+                  <div class="carousel-item">
+
+                    <div class="row">
+                      <div class="col">
+                        <p>To this day, no name is more feared at sea than the Saucy Squid. It's said that Captain Tobacco rides the water still, looking for crews of men to devour.
+                        </p>
+                      </div>
+                      <div class="col">
+                        <p><i>The moral of this story is, never trade places with a shark. You never know what you might enjoy.</i>
+                        </p>
+                      </div>
+                    </div>
+
                   </div>
-                     <div class="col">
-                <p>At first, all was well. Until one evening first mate Olly Graves was gutting a fish on deck and accidentally cut his finger. As the cut bled, Captain Tobacco got a faint whif of man-blood and that same peculiar feeling came over him.
-                </p>
-                <p>"Aye, Olly Graves," he said gently, "Let us have a look at yer wound then."
-                </p>
-                <p>The look of horror Olly Graves gave in return was enough to tell Captain Tobacco that something wasn't right. His jaw felt strange and his vision was strange... he caught his reflection in Olly's knife and realised instead of a beard and a pirate hat, he now had the head of a shark!
-                </p>
-
-                <p>Before you could say "here fishy fishy", Captain Tobacco had bitten poor Olly Graves in half and was munching him happily.
-                </p>
-                <p>Within a week, Captain Tobacco had eaten the entire crew. At first he missed them, because sailing a pirate ship is hard on one's own. So he made a trip to shore and hired a new crew, but before long he had eaten them too.
-                </p>
               </div>
             </div>
-
-                <div class="row">
-            <div class="col">
-                <p>To this day, no name is more feared at sea than the Saucy Squid. It's said that Captain Tobacco rides the water still, looking for crews of men to devour.
-                </p>
-              </div>
-              <div class="col">
-                <p><i>The moral of this story is, never trade places with a shark. You never know what you might enjoy.</i>
-                </p>
-              </div>
-              </div>
-            </div>
-          </div>
       </div>
       </main>
       <div id="ship">
@@ -261,5 +279,8 @@
       </div>
   </div>
       </section>
+      <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
 </html>
