--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,8 @@
       <section>
         <form>
           <div class="select" id="filter">
-          <select>
+            <label for="category-filter"Select a job role</label>
+          <select name="category-filter">
               <option>Please select</option>
               <option value="natural-police">Natural Police</option>
               <option value="come-at-the-king">Come at the king</option>
