--- a/app/index.html
+++ b/app/index.html
@@ -32,9 +32,9 @@
         <p>Select a category from the dropdown below.</p>
       </section>
       <section>
-        <form role="search">
-          <div class="select" id="filter">
-            <label class="sr-only" for="category-filter"Select a job role</label>
+        <form>
+          <div class="select" id="filter" role="search">
+            <label class="sr-only" for="category-filter">Select a job role</label>
           <select id="category-filter" name="category-filter">
               <option>Please select</option>
               <option value="natural-police">Natural Police</option>
