--- a/app/index.html
+++ b/app/index.html
@@ -70,7 +70,7 @@
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
   crossorigin="anonymous"></script>
   <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase.js"></script>
-  <script src="assets/js/app.js"></script>
+  <script src="assets/JS/app.js"></script>
 
   </body>
 </html>
