--- a/index.html
+++ b/index.html
@@ -39,21 +39,23 @@
           She liked picking flowers and riding her horse and doing normal girl stuff but there was something not right about her.
         </p>
         <p>During the night, she would dream of a very cold dark place, deep deep down in the sea.
-          Sometimes she would awake to the feeling of cold tentacles gripping her tightly.
+          Sometimes she would awake to the feeling of cold tentacles gripping her tightly. She would see a skull face with tentacles all around it, and she knew it was the Skull Kraken.
+        </p>
+        <p>Miranda wasn't fully aware of it yet but the Skull Kraken wanted her to be his bride and was enticing her with dreams of the deep ocean and his awesome skull and tentacle physique.
         </p>
       </div>
       <div class="col-lg-4 col-sm-6 col-xs-12">
-        <p>She didn't know it properly, but the Skull Kraken wanted her to be his bride and was putting dreams of the deep sea into her head.
-        </p>
+
         <p>Miranda's parents knew she was pretty weird and worried about not being able to find a husband for her.
           Back then, getting a husband was really, really important because women weren't really supposed to have jobs.
         </p>
-      </div>
-      <div class="col-lg-4 col-sm-6 col-xs-12">
         <p>Eventually, much to their relief, Miranda's father met a young farmer with a decent amount of money who wanted very much to marry Miranda.
-          He seemed pretty normal and wasn't bad looking, so Miranda's father agreed. Miranda didn't object either, but when he came around for tea she would get a faraway look in her eyes.
+          He seemed normal and had some money, so Miranda's father agreed. Miranda didn't object either, but when he came around for tea she would get a faraway look in her eyes.
           She was thinking about the sea.
         </p>
+      </div>
+      <div class="col-lg-4 col-sm-6 col-xs-12">
+          <img id="mermaid" src="assets/images/mermaid1.png" />
       </div>
     </div>
     <div class="row">
@@ -63,47 +65,49 @@
   </div>
     <div class="row">
       <div class="col-lg-4 col-sm-6 col-xs-12">
-        <p>This used to worry Miranda's parents. They were afraid the farmer, whose name was George, would figure out how strange she was before the wedding.
+        <p>Miranda's parents were very happy when the couple were eventually married.
         </p>
-        <p>They were very glad when eventually the wedding day came and George and Miranda were wed without any trouble.
+        <p>On their wedding night, George carried Miranda up to the bed-chamber, and Miranda knew what was supposed to happen next because her mother had awkwardly explained it that morning.
         </p>
-        <p>George carried Miranda up to the bed-chamber, and Miranda knew what was supposed to happen next because her mother had awkwardly explained it that morning.
+        <p>But when Miranda lay back on the goosefeather bed and closed her eyes,suddenly she could see a giant skull face with tentacles all around it.
+          It was the Skull Kraken, here to claim her!
         </p>
       </div>
       <div class="col-lg-4 col-sm-6 col-xs-12">
-        <p>Miranda lay back on the goosefeather bed and closed her eyes, and when she did, she could see a giant skull face with tentacles all around it.
-          It was the Skull Kraken, here to claim her!
-        </p>
-        <p>Miranda was frightened - but at the same happy to be finally going to the deep sea.
-        </p>
         <p>When she opened her eyes, Miranda was in a deep cavern under the sea. It was the lair of the Skull Kraken.
           Miranda could breathe fine under water because she was now a mermaid.
         </p>
-      </div>
-      <div class="col-lg-4 col-sm-6 col-xs-12">
         <p>"Miranda", said the Skull Kraken. "I have brought you here to be my bride. That is, if you want. I mean I'm not a monster, I won't force you."
         </p>
-        <p>Miranda thought about it for a while. "I think I'd like to stay here in the ocean", she said at last.
-          "I never felt quite at home up on land, people used to give me the strangest looks when I said anything. But, with all due respect, I'm not sure if I fancy you, even though your skull face and tentacles are pretty cool.
+        <p>Miranda thought about it for a while. She liked her new fish tail and the cool dark ocean.
+        </p>
+      </div>
+      <div class="col-lg-4 col-sm-6 col-xs-12">
+
+
+          <p>"I think I'd like to stay here in the ocean", she said at last,
+          "and I like your skull face and your tentacles. But it's too soon to know if I want to be your bride.
           Would it be OK if we spent some time getting to know each other first?"
+        </p>
+        <p>The Skull Kraken was a little bit crestfallen, but there was some encouragement to be found in her words. "That would be fine", he said "take all the time you need."
         </p>
       </div>
     </div>
     <div class="row">
+      <div class="col rose">
       <img src="assets/images/compassrose.png" class="compassrose"/>
     </div>
     <div class="row">
       <div class="col-lg-4 col-sm-6 col-xs-12">
-        <p>The Skull Kraken was a little bit crestfallen, but there was some encouragement to be found in her words. "That would be fine", he said "take all the time you need."
-        </p>
+
         <p>Miranda and the Skull Kraken never ended up being more than just friends.
-          The Skull Kraken eventually had to admit the attraction to Miranda had been mainly physical, and once he got to know her realised they didn't have enough in common to sustain a long-term relationship.
+        They went on a few dates but realised that despite their initial phyiscal attraction they didn't have enough in common to sustain a long-term relationship.
+        </p>
+        <p>However, they stayed friends for the rest of their lives, sharing underwater gardening tips and feeding each other's pet fish when the other went on holiday.
         </p>
       </div>
       <div class="col-lg-4 col-sm-6 col-xs-12">
-        <p>They never discussed it, but Miranda felt the same way, and after some time they both met other creatures and lived out their days quite happily under the sea.
-        </p>
-        <p>However, they stayed friends for the rest of their lives, sharing underwater gardening tips and feeding each other's pet fish when the other went on holiday.
+        <p>Miranda never went back to land, much preferring ocean life. She wrote her parents a letter to let them know she was OK, and swam up to the surface to give it to a seagull to deliver to them. Unfortunately, when the seagull arrived, Miranda's parents didn't realise the piece of seaweed in his mouth was a letter, and shooed him away. The seagull ate Miranda's letter, figuring it would be a waste of good seaweed not to.
         </p>
       </div>
       <div class="col-lg-4 col-sm-6 col-xs-12">
@@ -140,6 +144,7 @@
     </div>
   </div>
   <div class="row">
+    <div class="col rose">
     <img src="assets/images/compassrose.png" class="compassrose"/>
   </div>
   <div class="row">
@@ -161,6 +166,7 @@
     </div>
   </div>
   <div class="row">
+    <div class="col rose">
     <img src="assets/images/compassrose.png" class="compassrose"/>
   </div>
   <div class="row">
@@ -187,7 +193,8 @@
       </p>
     </div>
   </div>
-  <div>
+  <div class="row">
+    <div class="col rose">
     <img src="assets/images/compassrose.png" class="compassrose"/>
   </div>
   <div class="row">
@@ -219,8 +226,7 @@
   <div id="big-old-ship">
     <img src="assets/images/ship3.png" />
   </div>
-  <div id="mermaid">
-    <img src="assets/images/mermaid1.png" />
+
     <div id="big-wave-2">
       <img src="assets/images/waves.png" />
     </div>
