--- a/index.html
+++ b/index.html
@@ -43,9 +43,6 @@
         </p>
         <p>Miranda wasn't fully aware of it yet but the Skull Kraken wanted her to be his bride and was enticing her with dreams of the deep ocean and his awesome skull and tentacle physique.
         </p>
-      </div>
-      <div class="col-lg-4 col-sm-6 col-xs-12">
-
         <p>Miranda's parents knew she was pretty weird and worried about not being able to find a husband for her.
           Back then, getting a husband was really, really important because women weren't really supposed to have jobs.
         </p>
@@ -55,16 +52,6 @@
         </p>
       </div>
       <div class="col-lg-4 col-sm-6 col-xs-12">
-          <img id="mermaid" src="assets/images/mermaid1.png" />
-      </div>
-    </div>
-    <div class="row">
-      <div class="col rose">
-      <img src="assets/images/compassrose.png" class="compassrose"/>
-    </div>
-  </div>
-    <div class="row">
-      <div class="col-lg-4 col-sm-6 col-xs-12">
         <p>Miranda's parents were very happy when the couple were eventually married.
         </p>
         <p>On their wedding night, George carried Miranda up to the bed-chamber, and Miranda knew what was supposed to happen next because her mother had awkwardly explained it that morning.
@@ -72,8 +59,6 @@
         <p>But when Miranda lay back on the goosefeather bed and closed her eyes,suddenly she could see a giant skull face with tentacles all around it.
           It was the Skull Kraken, here to claim her!
         </p>
-      </div>
-      <div class="col-lg-4 col-sm-6 col-xs-12">
         <p>When she opened her eyes, Miranda was in a deep cavern under the sea. It was the lair of the Skull Kraken.
           Miranda could breathe fine under water because she was now a mermaid.
         </p>
@@ -81,14 +66,26 @@
         </p>
         <p>Miranda thought about it for a while. She liked her new fish tail and the cool dark ocean.
         </p>
+        <p>"I think I'd like to stay here in the ocean", she said at last,
+        "and I like your skull face and your tentacles. But it's too soon to know if I want to be your bride.
+        Would it be OK if we spent some time getting to know each other first?"
+      </p>
+      </div>
+      <div class="col-lg-4 col-sm-6 col-xs-12">
+          <img id="mermaid" src="assets/images/mermaid1.png" class="heartbeat">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-4 col-sm-6 col-xs-12">
+
+      </div>
+      <div class="col-lg-4 col-sm-6 col-xs-12">
+
       </div>
       <div class="col-lg-4 col-sm-6 col-xs-12">
 
 
-          <p>"I think I'd like to stay here in the ocean", she said at last,
-          "and I like your skull face and your tentacles. But it's too soon to know if I want to be your bride.
-          Would it be OK if we spent some time getting to know each other first?"
-        </p>
+
         <p>The Skull Kraken was a little bit crestfallen, but there was some encouragement to be found in her words. "That would be fine", he said "take all the time you need."
         </p>
       </div>
@@ -237,7 +234,7 @@
       <img src="assets/images/newship2.png" />
     </div>
     <div id="skullkraken">
-      <img src="assets/images/skullkraken.png" />
+      <img src="assets/images/skullkraken.png" class="heartbeat" />
     </div>
     <div id="tentacle">
       <img src="assets/images/tentacle.png" />
