--- a/index.html
+++ b/index.html
@@ -72,22 +72,7 @@
       </p>
       </div>
       <div class="col-lg-4 col-sm-6 col-xs-12">
-          <img id="mermaid" src="assets/images/mermaid1.png" class="heartbeat">
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-4 col-sm-6 col-xs-12">
-
-      </div>
-      <div class="col-lg-4 col-sm-6 col-xs-12">
-
-      </div>
-      <div class="col-lg-4 col-sm-6 col-xs-12">
-
-
-
-        <p>The Skull Kraken was a little bit crestfallen, but there was some encouragement to be found in her words. "That would be fine", he said "take all the time you need."
-        </p>
+          <img id="mermaid" src="assets/images/mermaid1.png">
       </div>
     </div>
     <div class="row">
@@ -96,24 +81,27 @@
     </div>
     <div class="row">
       <div class="col-lg-4 col-sm-6 col-xs-12">
-
+        <p>The Skull Kraken was a little bit crestfallen, but there was some encouragement to be found in her words. "That would be fine", he said "take all the time you need."
+        </p>
         <p>Miranda and the Skull Kraken never ended up being more than just friends.
         They went on a few dates but realised that despite their initial phyiscal attraction they didn't have enough in common to sustain a long-term relationship.
         </p>
-        <p>However, they stayed friends for the rest of their lives, sharing underwater gardening tips and feeding each other's pet fish when the other went on holiday.
+        <p>However, they stayed friends for the rest of their lives, playing seashell scrabble, sharing underwater gardening tips and feeding each other's pet fish when the other went on holiday.
         </p>
+      </div>
+      <div class="col-lg-4 col-sm-6 col-xs-12">
+      <img id="skullkraken" src="assets/images/skullkraken.png" class="heartbeat" />
       </div>
       <div class="col-lg-4 col-sm-6 col-xs-12">
         <p>Miranda never went back to land, much preferring ocean life. She wrote her parents a letter to let them know she was OK, and swam up to the surface to give it to a seagull to deliver to them. Unfortunately, when the seagull arrived, Miranda's parents didn't realise the piece of seaweed in his mouth was a letter, and shooed him away. The seagull ate Miranda's letter, figuring it would be a waste of good seaweed not to.
         </p>
-      </div>
-      <div class="col-lg-4 col-sm-6 col-xs-12">
-        <p>As for George, he sold his farm to buy a big ship, and spent the rest of his days searching the seas for his lost bride.
-        </p>
-        <p>They say that even now, many years since he has died, his ghost searches for her still, and sometimes during the full moon you can see his ghost ship gliding silently by.
+        <p>As for George, he sold his farm to buy a big ship, and spent the rest of his days searching the seas for his lost bride. They say that even now, many years since he has died, his ghost searches for her still, and sometimes during the full moon you can see his ghost ship gliding silently by.
         </p>
       </div>
     </div>
+  </div>
+  <div class="row">
+      <img id="big-waves"src="assets/images/waves2.png" class="slide-in-blurred-right"/>
   </div>
   <h3>A Cautionary Tale of Captain Tobacco and Jake the Shark</h3>
   <div class="row">
@@ -208,9 +196,6 @@
   <div id="ship">
     <img src="assets/images/newship.png" />
   </div>
-  <div id="big-waves">
-    <img src="assets/images/waves2.png" />
-  </div>
   <div id="big-ship">
     <img src="assets/images/ship2.png" />
   </div>
@@ -233,9 +218,7 @@
     <div id="new-ship-2">
       <img src="assets/images/newship2.png" />
     </div>
-    <div id="skullkraken">
-      <img src="assets/images/skullkraken.png" class="heartbeat" />
-    </div>
+
     <div id="tentacle">
       <img src="assets/images/tentacle.png" />
     </div>
