--- a/index.html
+++ b/index.html
@@ -13,19 +13,20 @@
 <title>Liz Falconer, Portfolio</title>
 </head>
 <body>
-  <header class="container">
+  <header id="top" class="container">
     <div class="row">
-      <div class="col logo">
-        <img src="assets/images/ghostship.png" alt="Liz Falconer Logo"/>
+      <div class="col logo order-2 order-md-1 ">
+        <img id="kraken1"src="assets/images/kraken1.png" alt="Liz Falconer Logo"/>
       </div>
-      <nav class="col">
-        <h1>Some Unfortunate and Unpleasant Incidents at Sea that Truly Happened</h1>
+      <nav class="col order-1 order-md-2">
+        <h1>Some Unfortunate and Unpleasant True Stories of Incidents at Sea</h1>
       </nav>
 
     </div>
   </header>
   <main class="container">
-    <h3>A Word of Warning for Those who Doubt the Importance of Oral Hygiene at Sea</h3>
+    <a name="top"></a>
+    <h3>A Word of Warning for Those who Doubt the Importance of Oral Hygiene</h3>
     <div class="row">
       <div class="col-lg-6 col-sm-6 col-xs-12">
         <p>Once upon a time there was a bad old pirate named Pirate Davey.
@@ -43,7 +44,7 @@
     </div>
     <div class="row">
       <div class="col-lg-6 col-sm-6 col-xs-12">
-        <img src="assets/images/whale.png" />
+        <img id="whale" src="assets/images/whale.png" />
       </div>
       <div class="col-lg-6 col-sm-6 col-xs-12">
         <p>One morning as Pirate Davey was out strolling on the deck of the Soiled Nappy, pirating and being a bastard, he met a whale called Old Man Bob.
@@ -73,14 +74,18 @@
         </p>
       </div>
       <div class="col-lg-6 col-sm-6 col-xs-12">
-        <img id="ship22"src="assets/images/ship2.png" />
         <img id="waves" src="assets/images/waves.png" />
       </div>
     </div>
 
     <div class="row">
       <div class="col-lg-6 col-sm-6 col-xs-12">
-        <p>Without Pirate Davey's breath to bother them, the fish regained their spirits and started mating again.
+        <p class="center">
+          <img id="ghostship" src="assets/images/ghostship.png" class="columnimage"/>
+        </p>
+      </div>
+      <div class="col-lg-6 col-sm-6 col-xs-12">
+        <p>Without Pirate Davey's breath to bother them, the fish regained their spirits and started spawning little baby fish again.
         </p>
         <p>To this day, Pirate Davey walks around the deck of the Soiled Nappy angrily looking for Old Man Bob so he can have his revenge.
         </p>
@@ -98,7 +103,9 @@
   <h3>A Cautionary Tale of Choosing a Bride Already Enchanted by the Sea</h3>
   <div class="row">
     <div class="col-lg-6 col-sm-6 col-xs-12">
-      <img id="flowers" src="assets/images/flowers.png" />
+     <p class="center">
+       <img id="flowers" src="assets/images/flowers.png" class="columnimage"/>
+     </p>
     </div>
     <div class="col-lg-6 col-sm-6 col-xs-12">
       <p>Long, long ago, there was a beautiful girl named Miranda.
@@ -129,7 +136,7 @@
       </p>
     </div>
     <div class="col-lg-6 col-sm-6 col-xs-12">
-      <img id="skullkraken" src="assets/images/newkraken.png" class="heartbeat" />
+      <img id="skullkraken" src="assets/images/newkraken.png" />
     </div>
   </div>
 </div>
@@ -142,7 +149,7 @@
   <div class="col-lg-6 col-sm-6 col-xs-12">
     <p>When she opened her eyes, Miranda was in a deep cavern under the sea. It was the lair of the Skull Kraken. Miranda could breathe fine under water because she was now a mermaid.
     </p>
-    <p>"Miranda", said the Skull Kraken. "I have brought you here to be my bride, if you will accept my proposal. I will give you seven days to decide it you like it here and want to marry me".
+    <p>"Miranda", said the Skull Kraken. "I have brought you here to be my bride, if you will accept my proposal. First I will give you seven days to decide it you like it here and want to marry me".
     </p>
     <p>Miranda agreed, as she already felt better just for being in the deep sea and away from annoying human society.
     </p>
@@ -152,19 +159,18 @@
     </p>
     <p>However, they really liked each other and so the Skull Kraken let Miranda keep her mermaid form and stay in the sea with him as just a friend. They remained friends for the rest of their lives, playing seashell scrabble, sharing underwater gardening tips and feeding each other's pet fish when the other went on holiday.
     </p>
-    <img id="bigwaves" src="assets/images/waves2.png" />
   </div>
-  <div id="mermaid" class="col-lg-6 col-sm-6 col-xs-12" "animate-flicker">
+  <div id="mermaid" class="col-lg-6 col-sm-6 col-xs-12" >
     <img  src="assets/images/mermaid1.png">
   </div>
 </div>
 
 <div class="row">
   <div class="col-lg-6 col-sm-6 col-xs-12">
-    <img src="assets/images/seagull.png" />
+    <img id="seagulls" src="assets/images/seagull.png" />
   </div>
 
-  <div class="col-lg-6 col-sm-6 col-xs-12">
+  <div id="scroll-to" class="col-lg-6 col-sm-6 col-xs-12">
     <p>Miranda wrote her parents a letter to let them know she was alright, and gave it to a seagull friend to deliver to them.
     </p>
     <p>Unfortunately, when he arrived, Miranda's parents didn't realise the piece of seaweed in his mouth was a letter, and shooed him away.
@@ -189,10 +195,11 @@
     <img src="assets/images/compassrose.png" class="compassrose"/>
   </div>
 </div>
-<h3>The Perils of Experimenting with Vices not Intended for Human Flesh</h3>
+<h3>The Perils of Experimenting with Vices Not Intended for Human Flesh</h3>
 <div class="row">
   <div class="col-lg-6 col-sm-6 col-xs-12">
-    <p class="center">  <img id="pirate"src="assets/images/pirate.png" />
+    <p class="center">
+      <img id="skull-side" src="assets/images/skullside.png" class="columnimage"/>
     </p>
   </div>
   <div class="col-lg-6 col-sm-6 col-xs-12">
@@ -222,31 +229,44 @@
 <div class="row">
   <div class="col-lg-6 col-sm-6 col-xs-12">
     <p class="center">
-      <img id="treasure" src="assets/images/treasure.png" />
+      <img id="treasure" src="assets/images/treasure.png" class="columnimage"/>
     </p>
   </div>
     <div class="col-lg-6 col-sm-6 col-xs-12">
       <p>At the mention of treasure, a strange feeling came over Captain Tobacco, as it always did, like a wonderful itching all over his skin. (He couldn't help it - he was a pirate).
       </p>
-      <p>"Treasure, eh," he murmured, his mind full of sunken wrecks overflowing with gold. "I reckon maybe the sea still has some treasures to be found. Very well, shark, I accept you proposal. Let's meet back at this spot in one week to swap back.
-      </p>
-      <p>Just like that, Captain Tobacco found himself under the water. For a second he felt afraid that he might drown, but then he realised he was a shark and could breathe and swim underwater. The first thing he did was swim deep down, looking for wrecked ships and the treasures they might contain.
+      <p>"Treasure, eh," he murmured, his mind full of sunken wrecks overflowing with gold. "I reckon maybe the sea still has some treasures to be found. Very well, shark, I accept you proposal. Let's meet back at this spot in one week to swap back.""
       </p>
     </div>
   </div>
-  <div class="row">
-    <div class="col rose">
-      <img src="assets/images/compassrose.png" class="compassrose"/>
-    </div>
     <div class="row">
       <div class="col-lg-6 col-sm-6 col-xs-12">
+        <p>Just like that, Captain Tobacco found himself under the water. For a moment he felt afraid that he might drown, but then he realised he was a shark and could breathe and swim underwater. The first thing he did was swim deep down, looking for wrecked ships and the treasures they might contain.
+        </p>
         <p>It wasn't long before he spotted one, and she was a beauty. There were still some skeletons of men and women on her deck, wearing rich jewels, and after a bit of swimming around Captain Tobacco found a large chest. "This must be full of treasure!" he said to himself. But when he went to open it, he realised he had no hands, only a pair of stupid fins.
         </p>
+
+      </div>
+<div class="col-lg-6 col-sm-6 col-xs-12">
+<p class="center">
+  <img id="shipwreck" src="assets/images/history-shipwreck.jpg" class="columnimage" />
+</p>
+</div>
+</div>
+    <div class="row">
+      <div class="col-lg-6 col-sm-6 col-xs-12">
+      <p class="center">
+        <img id="shark2" src="assets/images/shark2.png" class="columnimage"/>
+      </p>
+    </div>
+      <div class="col-lg-6 col-sm-6 col-xs-12">
         <p>"Never mind," he thought, "what good is it being a shark if you can't use your great big teeth!" And with that he set upon the chest's catch with his great teeth and soon had it open. But he couldn't carry the treasure away because he had no hands to carry it.
         </p>
         <p>Captain Tobacco was very disappointed. "Buggery fuck" he cursed "argh well at least I know where it is now. And I can find others. Next week when I trade places back with Jake the Shark I can come back here and send my best swimmers down to fetch the treasure." He decided to swim up to the surface and see if there were any landmarks or stars that could help guide him back to this spot.
         </p>
       </div>
+    </div>
+    <div class="row">
       <div class="col-lg-6 col-sm-6 col-xs-12">
         <p>On his way to the surface, when he had nearly reached the top, Captain Tobacco spied a thrashing movement. At first he thought it was two fish fighting, but then he realised it was two human legs kicking. By the way the person, a young man, was thrashing around Captain Tobacco knew he was in a spot of bother and would probably drown. "Argh, too bad for yer" he thought.
         </p>
@@ -255,12 +275,23 @@
         <p>Captain Tobacco surprised both himself and the drowning man by eating first one leg, then the other, then the entire rest of the poor gentlemen, before he hardly knew what was happening. "Argh bugger me, turns out a man is a juicy morsel - I know what them sharks been on about all this time, I do," reflected Captain Tobacco.
         </p>
       </div>
+        <div class="col-lg-6 col-sm-6 col-xs-12">
+          <p class="center">
+            <img id="shark3" src="assets/images/shark3.png" class="columnimage"/>
+          </p>
+      </div>
     </div>
     <div class="row">
       <div class="col rose">
         <img src="assets/images/compassrose.png" class="compassrose"/>
       </div>
+    </div>
       <div class="row">
+        <div class="col-lg-6 col-sm-6 col-xs-12">
+          <p class="center">
+            <img id="ship3" src="assets/images/ship3.png" class="columnimage"/>
+          </p>
+      </div>
         <div class="col-lg-6 col-sm-6 col-xs-12">
           <p>Over the next week, Captain Tobacco found many sunken treasure ships he would never have discovered otherwise, and when he wasn't doing that he was munching on men who had fallen overboard (actually they were mostly naughty sailors who'd been forced to walk the plank). Captain Tobacco had never known such good eating in his life and had to admit he would miss the taste of human flesh once he became a pirate again.
           </p>
@@ -271,6 +302,8 @@
           <p>Before he know it, Captain Tobacco was back on the deck of the Saucy Squid, wearing his pirate clothes and pirate hat. "Well that was interesting," he thought to himself.
           </p>
         </div>
+    </div>
+        <div class="row">
         <div class="col-lg-6 col-sm-6 col-xs-12">
           <p>At first, all was well. Until one evening first mate Olly Graves was gutting a fish on deck and accidentally cut his finger. As the cut bled, Captain Tobacco got a faint whif of man-blood and that same peculiar feeling came over him.
           </p>
@@ -282,23 +315,38 @@
           </p>
           <p>Within a week, Captain Tobacco had eaten the entire crew. At first he missed them, because sailing a pirate ship is hard on one's own. So he made a trip to shore and hired a new crew, but before long he had eaten them too.
           </p>
+          <p>To this day, no name is more feared at sea than the Saucy Squid. It's said that Captain Tobacco rides the water still, looking for crews of men to devour.
+          </p>
         </div>
+        <div class="col-lg-6 col-sm-6 col-xs-12">
+          <p class="center">
+            <img id="skulls" src="assets/images/skulls.png" class="columnimage"/>
+          </p>
       </div>
-      <div class="row">
-        <div class="col rose">
-          <img src="assets/images/compassrose.png" class="compassrose"/>
-        </div>
-        <div class="row">
-          <div class="col-lg-6 col-sm-6 col-xs-12">
-            <p>To this day, no name is more feared at sea than the Saucy Squid. It's said that Captain Tobacco rides the water still, looking for crews of men to devour.
-            </p>
-          </div>
-          <div class="col-lg-6 col-sm-6 col-xs-12">
-            <p><i>The moral of this story is, never trade places with a shark. You never know what you might enjoy.</i>
-            </p>
-          </div>
-        </div>
       </div>
-
+          </div>
     </main>
+<div class="stickybutton">
+<h4 class="buttontext"><a href='#top'>^</a></h4>
+</div>
+    <footer>
+      <div class="container">
+        <div class="row">
+      <div class="col-lg-4 col-sm-6 col-xs-12">
+      <h4>Thank you for reading
+      </h4>
+    </div>
+    <div class="col-lg-4 col-sm-6 col-xs-12">
+    <h4>Have a nice day
+    </h4>
+  </div>
+  <div class="col-lg-4 col-sm-6 col-xs-12">
+  <h4><a href="mailto:lizzyborrie@gmail.com">Contact</a>
+  </h4>
+</div>
+</div>
+</div>
+    </footer>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"> </script>
+    <script src="assets/js/app.js" type="text/javascript"> </script>
   </body>
